InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerPayment__c/vlocity_ins__ProducerPayment__c.object-meta.xml
<CustomObject>
    <description>Represents compensation payments made by the insurance company to its agents/brokers/producers such as fees, commissions or adjustments. Master-detail child object of an Agent/Broker/Producer Contact.</description>
    <label>Producer Payment</label>
    <nameField>
        <label>Check #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Producer Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>