InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerPayment__c/fields/vlocity_ins__ProducerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProducerId__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>ProducerPayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>