InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerPayment__c/fields/vlocity_ins__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid Sent</fullName>
            </value>
            <value>
                <fullName>Paid Not Sent</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
            <value>
                <fullName>Closed Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>